--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<div id="app"></div>
+		<!-- <div id="app"></div> -->
 		<script type="module" src="./src/main.js"></script>
+    <h1> Plotly Template </h1>
+    <div id="chart-001" class="chart"></div>
+    
 	</body>
 </html>
