--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<!-- <div id="app"></div> -->
 		<script type="module" src="./src/main.js"></script>
     <h1> Plotly Template </h1>
-    <div id="chart-001" class="chart"></div>
+    <div id="plotly" class="row">
+      <div id="chart-001" class="six columns"></div>
+      <div id="chart-002" class="six columns"></div>
+    </div>
     
 	</body>
 </html>
