...need to understand async func

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
 		<h1>Plotly Template</h1>
 
+		<div id="plotly-g00" class="row"></div>
+
 		<div id="plotly-g01" class="row">
-			<div id="chart-001" class="six columns"></div>
+			<div id="chart-001" class="four columns"></div>
 			<div id="chart-002" class="six columns"></div>
 		</div>
 
-		<div id="plotly-g02" class="row"></div>
+		<div id="plotly-g02" class="eleven columns"></div>
 	</body>
 </html>
