--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<body>
 		<!-- <div id="app"></div> -->
 
+		<script src="https://cdn.jsdelivr.net/npm/danfojs@1.1.2/lib/bundle.min.js"></script>
+
 		<script type="module" src="./src/main.js"></script>
 
 		<h1>Plotly Template</h1>
