--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="plotly-g00" class="row"></div>
 
 		<div id="plotly-g01" class="row">
-			<div id="chart-001" class="four columns"></div>
+			<div id="chart-001" class="six columns"></div>
 			<div id="chart-002" class="six columns"></div>
 		</div>
 
