--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/danfojs@1.1.2/lib/bundle.min.js"></script>
 
-		<script type="module" src="./src/main.js"></script>
+		<!-- <script type="module" src="./src/main.js"></script> -->
+		<script type="module" src="./src/main_danfo.js"></script>
 
 		<h1>Plotly Template</h1>
 
