try d3.js to read csv file

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	</head>
 	<body>
 		<!-- <div id="app"></div> -->
+		<pre id="message"></pre>
 
 		<script src="https://cdn.jsdelivr.net/npm/danfojs@1.1.2/lib/bundle.min.js"></script>
 
 		<!-- <script type="module" src="./src/main.js"></script> -->
-		<script type="module" src="./src/main_danfo.js"></script>
+		<!-- <script type="module" src="./src/main_danfo.js"></script> -->
+		<script type="module" src="./src/main_d3.js"></script>
 
 		<h1>Plotly Template</h1>
 
