--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<h1>Plotly Template</h1>
 
-		<div id="plotly-g00" class="row"></div>
+		<div id="plotly-g00" class="eleven columns"></div>
 
 		<div id="plotly-g01" class="row">
 			<div id="chart-001" class="six columns"></div>
